k8s-manifests/aspnet-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
    spec:
      containers:
        - name: web-api
          image: upendragusain/clusterflux-api:latest
          ports:
            - containerPort: 8080  

---
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
spec:
  type: NodePort
  selector:
    app: web-api
  ports:
    - port: 8080              # internal Cluster IP port
      targetPort: 8080        # matches containerPort
      nodePort: 30081         # external VM port (already opened)
